2024-11-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-wrong-passwd-regexp): Add fingerprint messages.
	(tramp-fingerprint-prompt-regexp, tramp-use-fingerprint):
	New defcustoms.
	(tramp-action-fingerprint, tramp-action-show-message): New defuns.
	(tramp-action-show-and-confirm-message): Start check at (point-min).

	* tramp-sh.el (tramp-actions-before-shell):
	Use `tramp-fingerprint-prompt-regexp'.

2024-11-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-initial-file-name-regexp)
	(tramp-autoload-file-name-regexp): Don't use `rx' in autoloaded
	objects.  (Bug#74490)

2024-11-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-fuse.el (tramp-fuse-name-prefix): New defconst.
	(tramp-fuse-mount-point): Use it.

2024-11-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-adb.el (tramp-adb-maybe-open-connection): Rename file
	property "process-attributes" to connection property
	" process-attributes".

	* tramp.el (tramp-get-process-attributes)
	(tramp-handle-list-system-processes): Rename file property
	"process-attributes" to connection property " process-attributes".
	(tramp-compute-multi-hops): Check for
	`tramp-sh-file-name-handler-p', it works only for this.
	(tramp-action-password, tramp-process-actions): Use connection
	property "hop-vector".
	(tramp-read-passwd, tramp-clear-passwd): Rewrite.  (Bug#74105)

	* tramp-sh.el (tramp-maybe-open-connection): Use connection
	property "hop-vector".

	* tramp.el (tramp-read-passwd):
	* tramp-sh.el (tramp-maybe-open-connection):
	* tramp-sudoedit.el (tramp-sudoedit-send-command): Rename
	connection property "password-vector" to "pw-vector".

2024-11-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (tramp-dump-connection-properties):
	Don't dump properties starting with a space.

	* tramp-cache.el:
	* tramp.el:
	* tramp-adb.el:
	* tramp-androidsu.el:
	* tramp-cmds.el:
	* tramp-crypt.el:
	* tramp-gvfs.el:
	* tramp-sh.el: